--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title> </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   </head>
   <body>
 
     <div class ="container">
+
       <div class="menuBox">
         <div class="div1">
 
@@ -24,27 +26,47 @@
         </div>
 
         <div class="div2">
-          <iframe src="https://www.youtube.com/embed/x_9Uy_iz_yk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <p> oosoncihn </p>
+          <img src="yukaDonuts.png" class = "thumbnailL">
+          <img src = "play1.png" class = "playL">
+
+        <p class = "descripR"> oosoncihn </p>
         </div>
+
         <div class="div3">
-          <p> oosoncihn </p>
-          <iframe src="https://www.youtube.com/embed/bYdYLMGz7EI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+          <p class = "descripL"> oosoncihn </p>
+          <img src="bokiFruits.png" class = "thumbnailR">
+          <img src = "play1.png" class = "playR">
+
+          </div>
         <div class="div4">
-          <iframe src="https://www.youtube.com/embed/xFUES-zDnZE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <p> oosoncihn </p>
+          <!-- NOTE: <iframe src="https://www.youtube.com/embed/xFUES-zDnZE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         -->
+         <img src="stephBurgers.png" class = "thumbnailL">
+         <img src = "play1.png" class = "playL">
+          <p class = "descripR"> oosoncihn </p>
         </div>
         <div class="div5">
-          <p> oosoncihn </p>
-          <iframe  src="https://www.youtube.com/embed/acdYXn_jfek" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p class = "descripL"> oosoncihn </p>
+          <img src="sioBrekkie.png" class = "thumbnailR">
+          <img src = "play1.png" class = "playR">
+          <!-- NOTE: <iframe  src="https://www.youtube.com/embed/acdYXn_jfek" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         -->
         </div>
+
       </div>
-    </div>
+      <div class = "arrow">
+        <img src="arrow.gif" class = "next">
+      </div>
 
 
+
+
+
+
+  </div>
   <script src="script.js" charset="utf-8"></script>
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
 
 </html>
