--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="div1">
 
           <div class= "logo">
-
+            <img src="logo1.png">
           </div>
           <div class= "title">
             Assorted Mukbang
@@ -26,29 +26,29 @@
         </div>
 
         <div class="div2">
-          <img src="yukaDonuts.png" class = "thumbnailL">
-          <img src = "play1.png" class = "playL">
+          <img src="yukaDonuts.png" id = "thumbnailL" class = "thumbnail">
+          <img src = "play.png" class = "playL">
 
         <p class = "descripR"> oosoncihn </p>
         </div>
 
         <div class="div3">
           <p class = "descripL"> oosoncihn </p>
-          <img src="bokiFruits.png" class = "thumbnailR">
-          <img src = "play1.png" class = "playR">
+          <img src="bokiFruits.png" id ="thumbnailR" class = "thumbnail">
+          <img src = "play.png" class = "playR">
 
           </div>
         <div class="div4">
           <!-- NOTE: <iframe src="https://www.youtube.com/embed/xFUES-zDnZE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          -->
-         <img src="stephBurgers.png" class = "thumbnailL">
-         <img src = "play1.png" class = "playL">
+         <img src="stephBurgers.png" id = "thumbnailL" class = "thumbnail">
+         <img src = "play.png" class = "playL">
           <p class = "descripR"> oosoncihn </p>
         </div>
         <div class="div5">
           <p class = "descripL"> oosoncihn </p>
-          <img src="sioBrekkie.png" class = "thumbnailR">
-          <img src = "play1.png" class = "playR">
+          <img src="sioBrekkie.png" id = "thumbnailR" class = "thumbnail">
+          <img src = "play.png" class = "playR">
           <!-- NOTE: <iframe  src="https://www.youtube.com/embed/acdYXn_jfek" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          -->
         </div>
