--- a/index.html
+++ b/index.html
@@ -27,31 +27,61 @@
 
         <div class="div2">
           <img src="yukaDonuts.png" id = "thumbnailL" class = "thumbnail">
-          <img src = "play.png" class = "playL">
+          <img src = "play.png" id = "play1" class = "playL">
 
+          <div id = "yukaModal" class="modal">
+             <iframe controls src="https://www.youtube.com/embed/6aOusoYnoYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         <p class = "descripR"> oosoncihn </p>
         </div>
 
         <div class="div3">
           <p class = "descripL"> oosoncihn </p>
           <img src="bokiFruits.png" id ="thumbnailR" class = "thumbnail">
-          <img src = "play.png" class = "playR">
+          <img src = "play.png" id = "play2" class = "playR">
+
+          <div id = "bokiModal" class="modal">
+            <iframe controls src="https://www.youtube.com/embed/bYdYLMGz7EI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
 
           </div>
+
         <div class="div4">
-          <!-- NOTE: <iframe src="https://www.youtube.com/embed/xFUES-zDnZE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         -->
+
          <img src="stephBurgers.png" id = "thumbnailL" class = "thumbnail">
-         <img src = "play.png" class = "playL">
+         <img src = "play.png" id = "play3" class = "playL">
+         <div id = "stephModal" class="modal">
+           <iframe controls src="https://www.youtube.com/embed/xFUES-zDnZE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
           <p class = "descripR"> oosoncihn </p>
         </div>
+
         <div class="div5">
           <p class = "descripL"> oosoncihn </p>
           <img src="sioBrekkie.png" id = "thumbnailR" class = "thumbnail">
-          <img src = "play.png" class = "playR">
-          <!-- NOTE: <iframe  src="https://www.youtube.com/embed/acdYXn_jfek" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         -->
+          <img src = "play.png" id = "play4" class = "playR">
+          <div id = "sioModal" class="modal">
+            <iframe controls src="https://www.youtube.com/embed/acdYXn_jfek" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </div>
+          <!-- NOTE:  -->
         </div>
+
+
+
+
+
+<!-- NOTE:
+        <div class="modal fade" id ="yuka">
+          <div class = "modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-body">
+            <iframe   width= 100% height=50% controls src="https://www.youtube.com/embed/6aOusoYnoYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+        </div>
+      </div>
+ -->
+
 
       </div>
       <div class = "arrow">
@@ -65,8 +95,6 @@
 
   </div>
   <script src="script.js" charset="utf-8"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
 
 </html>
