--- a/back.html
+++ b/back.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class ="container">
+    <div class ="container2">
 
       <div class="menuBox">
         <div class="div1">
@@ -68,8 +68,7 @@
 
       </div>
       <div class = "arrow">
-        <img src="arrow.gif" id = "next">
-
+        <img src="leftArrow.gif" id ="before">
       </div>
 
 
