--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class ="container">
 
       <div class="menuBox">
-        <div class="div1">
+        <div id="div1">
 
           <div class= "logo">
             <img src="logo1.png">
@@ -25,7 +25,7 @@
 
         </div>
 
-        <div class="div2">
+        <div id="div2">
           <img src="yukaDonuts.png" id = "thumbnailL" class = "thumbnail">
           <img src = "play.png" id = "play1" class = "playL">
 
@@ -35,7 +35,7 @@
         <p class = "descripR"> oosoncihn </p>
         </div>
 
-        <div class="div3">
+        <div id="div3">
           <p class = "descripL"> oosoncihn </p>
           <img src="bokiFruits.png" id ="thumbnailR" class = "thumbnail">
           <img src = "play.png" id = "play2" class = "playR">
@@ -46,7 +46,7 @@
 
           </div>
 
-        <div class="div4">
+        <div id="div4">
 
          <img src="stephBurgers.png" id = "thumbnailL" class = "thumbnail">
          <img src = "play.png" id = "play3" class = "playL">
@@ -56,7 +56,7 @@
           <p class = "descripR"> oosoncihn </p>
         </div>
 
-        <div class="div5">
+        <div id="div5">
           <p class = "descripL"> oosoncihn </p>
           <img src="sioBrekkie.png" id = "thumbnailR" class = "thumbnail">
           <img src = "play.png" id = "play4" class = "playR">
@@ -69,6 +69,7 @@
       </div>
       <div class = "arrow">
         <img src="arrow.gif" id = "next">
+        <a href="back.html"> </a>
 
       </div>
 
