--- a/back.html
+++ b/back.html
@@ -4,80 +4,73 @@
     <meta charset="utf-8">
     <title> </title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  </head>
+    </head>
   <body>
 
-    <div class ="container2">
+    <div class ="container">
 
       <div class="menuBox">
-        <div class="div1">
+        <div id="div1">
 
           <div class= "logo">
-            <img src="logo1.png">
+            <img src="logo2.png">
           </div>
           <div class= "title">
-            Assorted Mukbang
+            Assorted Mukbang*
             <div class="title">
               Menu
             </div>
           </div>
-
         </div>
 
-        <div class="div2">
-          <img src="yukaDonuts.png" id = "thumbnailL" class = "thumbnail">
-          <img src = "play.png" id = "play1" class = "playL">
+        <div id ="div6">
+          <img src="inahConvenience.png" id = "thumbnailL" class = "thumbnail">
+          <img src = "play.png" id = "play5" class = "playL">
 
-          <div id = "yukaModal" class="modal">
-             <iframe controls src="https://www.youtube.com/embed/6aOusoYnoYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+          <div id = "inahModal" class="modal">
+             <iframe controls src="https://www.youtube.com/embed/nkhhq0LJHOQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </div>
+
         <p class = "descripR"> oosoncihn </p>
+      </div>
+
+
+        <div class="div7">
+          <p class = "descripL"> oosoncihn </p>
+          <img src="katherine.png" id ="thumbnailR" class = "thumbnail">
+          <img src = "play.png" id = "play6" class = "playR">
+          <div id = "katherineModal" class="modal">
+            <iframe controls src="https://www.youtube.com/embed/1gkRzIxRKQI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
 
-        <div class="div3">
-          <p class = "descripL"> oosoncihn </p>
-          <img src="bokiFruits.png" id ="thumbnailR" class = "thumbnail">
-          <img src = "play.png" id = "play2" class = "playR">
+        <div class="div8">
 
-          <div id = "bokiModal" class="modal">
-            <iframe controls src="https://www.youtube.com/embed/bYdYLMGz7EI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-
-          </div>
-
-        <div class="div4">
-
-         <img src="stephBurgers.png" id = "thumbnailL" class = "thumbnail">
-         <img src = "play.png" id = "play3" class = "playL">
-         <div id = "stephModal" class="modal">
-           <iframe controls src="https://www.youtube.com/embed/xFUES-zDnZE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+         <img src="veronica.png" id = "thumbnailL" class = "thumbnail">
+         <img src = "play.png" id = "play7" class = "playL">
+         <div id = "veronicaModal" class="modal">
+           <iframe controls src="https://www.youtube.com/embed/iU0bzQQjMUw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
           <p class = "descripR"> oosoncihn </p>
         </div>
 
-        <div class="div5">
+        <div class="div9">
           <p class = "descripL"> oosoncihn </p>
-          <img src="sioBrekkie.png" id = "thumbnailR" class = "thumbnail">
-          <img src = "play.png" id = "play4" class = "playR">
-          <div id = "sioModal" class="modal">
-            <iframe controls src="https://www.youtube.com/embed/acdYXn_jfek" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           </div>
-
+          <img src="megan.png" id = "thumbnailR" class = "thumbnail">
+          <img src = "play.png" id = "play8" class = "playR">
+          <div id = "meganModal" class="modal">
+            <iframe controls src="https://www.youtube.com/embed/1eFqaeLPxiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
         </div>
 
       </div>
+      
       <div class = "arrow">
         <img src="leftArrow.gif" id ="before">
       </div>
 
 
-
-
-
-
   </div>
-  <script src="script.js" charset="utf-8"></script>
+  <script src="script2.js" charset="utf-8"></script>
+
   </body>
 
 </html>
