just need comments

--- a/index.html
+++ b/index.html
@@ -26,18 +26,25 @@
         </div>
 
         <div id="div2">
-          <img src="yukaDonuts.png" id = "thumbnailL" class = "thumbnail">
+          <img src="yukaDonuts.png" class = "thumbnailL">
           <img src = "play.png" id = "play1" class = "playL">
 
           <div id = "yukaModal" class="modal">
              <iframe controls src="https://www.youtube.com/embed/6aOusoYnoYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-        <p class = "descripR"> oosoncihn </p>
+          <div class = "descripR" id = "yuka">
+            <h4> Yuka's Krispy Kreme Mukbang</h4>
+
+          </div>
         </div>
 
         <div id="div3">
-          <p class = "descripL"> oosoncihn </p>
-          <img src="bokiFruits.png" id ="thumbnailR" class = "thumbnail">
+          <div class = "descripL" id = "boki">
+            <h4> Boki's Fruits Mukbang</h4>
+            <p > oosoncihn </p>
+          </div>
+
+          <img src="bokiFruits.png" class = "thumbnailR">
           <img src = "play.png" id = "play2" class = "playR">
 
           <div id = "bokiModal" class="modal">
@@ -48,17 +55,23 @@
 
         <div id="div4">
 
-         <img src="stephBurgers.png" id = "thumbnailL" class = "thumbnail">
+         <img src="stephBurgers.png" class = "thumbnailL">
          <img src = "play.png" id = "play3" class = "playL">
          <div id = "stephModal" class="modal">
            <iframe controls src="https://www.youtube.com/embed/xFUES-zDnZE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <p class = "descripR"> oosoncihn </p>
+          <div class = "descripR" id = "steph">
+            <h4>Steph's In n Out Mukbang</h4>
+            <p> oosoncihn </p>
+          </div>
         </div>
 
         <div id="div5">
-          <p class = "descripL"> oosoncihn </p>
-          <img src="sioBrekkie.png" id = "thumbnailR" class = "thumbnail">
+          <div class = "descripL" id = "sio">
+            <h4>Sio's ASMR Mukbang</h4>
+            <p> oosoncihn </p>
+          </div>
+          <img src="sioBrekkie.png" class = "thumbnailR">
           <img src = "play.png" id = "play4" class = "playR">
           <div id = "sioModal" class="modal">
             <iframe controls src="https://www.youtube.com/embed/acdYXn_jfek" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -69,7 +82,6 @@
       </div>
       <div class = "arrow">
         <img src="arrow.gif" id = "next">
-        <a href="back.html"> </a>
 
       </div>
 
