--- a/back.html
+++ b/back.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title> </title>
     <link rel="stylesheet" href="style.css">
-    </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  </head>
   <body>
 
     <div class ="container">
 
       <div class="menuBox">
-        <div id="div1">
+        <div id="div0">
 
           <div class= "logo">
             <img src="logo2.png">
@@ -24,53 +25,66 @@
         </div>
 
         <div id ="div6">
-          <img src="inahConvenience.png" id = "thumbnailL" class = "thumbnail">
+          <img src="inahConvenience.png" class = "thumbnailL">
           <img src = "play.png" id = "play5" class = "playL">
 
           <div id = "inahModal" class="modal">
              <iframe controls src="https://www.youtube.com/embed/nkhhq0LJHOQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           </div>
+          </div>
 
-        <p class = "descripR"> oosoncihn </p>
-      </div>
+          <div class = "descripR">
+            <h4> Inah's Convenience Food Mukbang</h4>
+            <p> oosoncihn </p>
+          </div>
+        </div>
 
 
-        <div class="div7">
-          <p class = "descripL"> oosoncihn </p>
-          <img src="katherine.png" id ="thumbnailR" class = "thumbnail">
+        <div id="div7">
+          <div class = "descripL">
+            <h4> Katherine's Chick Fil A Mukbang</h4>
+            <p> oosoncihn </p>
+          </div>
+
+          <img src="katherine.png" class = "thumbnailR">
           <img src = "play.png" id = "play6" class = "playR">
+
           <div id = "katherineModal" class="modal">
             <iframe controls src="https://www.youtube.com/embed/1gkRzIxRKQI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
 
-        <div class="div8">
+        <div id="div8">
 
-         <img src="veronica.png" id = "thumbnailL" class = "thumbnail">
+         <img src="veronica.png" class = "thumbnailL">
          <img src = "play.png" id = "play7" class = "playL">
          <div id = "veronicaModal" class="modal">
            <iframe controls src="https://www.youtube.com/embed/iU0bzQQjMUw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-          <p class = "descripR"> oosoncihn </p>
+           <div class = "descripR">
+             <h4> Veronica's Burger King Mukbang</h4>
+             <p> oosoncihn </p>
+           </div>
         </div>
 
-        <div class="div9">
-          <p class = "descripL"> oosoncihn </p>
-          <img src="megan.png" id = "thumbnailR" class = "thumbnail">
+        <div id="div9">
+          <div class = "descripL">
+            <h4>Megan's Cake Mukbang</h4>
+            <p> oosoncihn </p>
+          </div>
+
+          <img src="megan.png" class = "thumbnailR">
           <img src = "play.png" id = "play8" class = "playR">
           <div id = "meganModal" class="modal">
             <iframe controls src="https://www.youtube.com/embed/1eFqaeLPxiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
         </div>
 
       </div>
-      
+
       <div class = "arrow">
         <img src="leftArrow.gif" id ="before">
       </div>
 
-
   </div>
   <script src="script2.js" charset="utf-8"></script>
-
   </body>
 
 </html>
