back page comments need 2 change

--- a/back.html
+++ b/back.html
@@ -32,17 +32,15 @@
              <iframe controls src="https://www.youtube.com/embed/nkhhq0LJHOQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
 
-          <div class = "descripR">
+          <div id = "inah" class = "descripR">
             <h4> Inah's Convenience Food Mukbang</h4>
-            <p> oosoncihn </p>
           </div>
         </div>
 
 
         <div id="div7">
-          <div class = "descripL">
+          <div id = "katherine" class = "descripL">
             <h4> Katherine's Chick Fil A Mukbang</h4>
-            <p> oosoncihn </p>
           </div>
 
           <img src="katherine.png" class = "thumbnailR">
@@ -59,16 +57,14 @@
          <img src = "play.png" id = "play7" class = "playL">
          <div id = "veronicaModal" class="modal">
            <iframe controls src="https://www.youtube.com/embed/iU0bzQQjMUw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-           <div class = "descripR">
+           <div id = "veronica"class = "descripR">
              <h4> Veronica's Burger King Mukbang</h4>
-             <p> oosoncihn </p>
            </div>
         </div>
 
         <div id="div9">
-          <div class = "descripL">
+          <div id = "megan" class = "descripL">
             <h4>Megan's Cake Mukbang</h4>
-            <p> oosoncihn </p>
           </div>
 
           <img src="megan.png" class = "thumbnailR">
