comment section updates

--- a/back.html
+++ b/back.html
@@ -26,7 +26,7 @@
 
         <div id ="div6">
           <img src="inahConvenience.png" class = "thumbnailL">
-          <img src = "play.png" id = "play5" class = "playL">
+          <img src = "play.png" id = "play6" class = "playL">
 
           <div id = "inahModal" class="modal">
              <iframe controls src="https://www.youtube.com/embed/nkhhq0LJHOQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -44,7 +44,7 @@
           </div>
 
           <img src="katherine.png" class = "thumbnailR">
-          <img src = "play.png" id = "play6" class = "playR">
+          <img src = "play.png" id = "play7" class = "playR">
 
           <div id = "katherineModal" class="modal">
             <iframe controls src="https://www.youtube.com/embed/1gkRzIxRKQI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -54,7 +54,7 @@
         <div id="div8">
 
          <img src="veronica.png" class = "thumbnailL">
-         <img src = "play.png" id = "play7" class = "playL">
+         <img src = "play.png" id = "play8" class = "playL">
          <div id = "veronicaModal" class="modal">
            <iframe controls src="https://www.youtube.com/embed/iU0bzQQjMUw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
            <div id = "veronica"class = "descripR">
@@ -68,12 +68,25 @@
           </div>
 
           <img src="megan.png" class = "thumbnailR">
-          <img src = "play.png" id = "play8" class = "playR">
+          <img src = "play.png" id = "play9" class = "playR">
           <div id = "meganModal" class="modal">
             <iframe controls src="https://www.youtube.com/embed/1eFqaeLPxiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
         </div>
 
+
+        <div id="div10">
+          <img src="chu.png" class = "thumbnailL">
+          <img src = "play.png" id = "play10" class = "playL">
+          <div id = "chuModal" class="modal">
+            <iframe controls src="https://www.youtube.com/embed/r1IixKcNALQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div id = "chu" class = "descripR">
+            <h4>Chujeong's Fried Chicken Mukbang</h4>
+          </div>
+
+        </div>
       </div>
+
 
       <div class = "arrow">
         <img src="leftArrow.gif" id ="before">
