--- a/about.html
+++ b/about.html
@@ -8,36 +8,27 @@
 
   </head>
   <body>
-    <div class="container">
-      <div class="header">
+    <div class="Acontainer">
 
-      </div>
       <div class="descrip">
         <div class="what">
-          <h3>What are mukbangs?</h3>
-          <p>A mukbang, also spelled meokbang, translates to 'eating show'. It is an online audiovisual broadcast in which a host consumes large quantities of food while interacting with the audience. It became popular in South Korea in 2010, and since then it has become a worldwide trend.</p>
+          <span id = "korean">먹&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방</span>
+          <span>Mukda &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bangsong</span>
+          <span>'to eat' &nbsp;&nbsp;&nbsp;&nbsp;'broadcast'</span>
         </div>
         <div class="why">
+          <h3>What are mukbangs?</h3>
+          <p>A mukbang, also spelled meokbang, translates to 'eating show'. It is an online audiovisual broadcast in which a host consumes large quantities of food while interacting with the audience. It became popular in South Korea in 2010, and since then it has become a worldwide trend.</p>
+
           <h3>Why do people watch mukbangs?</h3>
         </div>
         <div class="how">
           <h3>Why are there issues with mukbangs</h3>
         </div>
-        <div class="sample">
-          <h3>'Controversial' mukbangs</h3>
-          <div class = "grid" id="videoGrid1">
-
-          </div>
-
-          <div class = "grid" id="videoGrid2">
-
-          </div>
-
-          <div class = "grid" id="videoGrid3">
 
           </div>
         </div>
-      </div>
-    </div>
+
+
   </body>
 </html>
