--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
 
       <div class="descrip">
         <div class="what">
-          <span id = "korean">먹&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방</span>
-          <span>Mukda &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bangsong</span>
-          <span>'to eat' &nbsp;&nbsp;&nbsp;&nbsp;'broadcast'</span>
+          <span id = "korean">먹&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방</span>
+          <span>Mukda &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bangsong</span>
+          <span>'to eat' &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'broadcast'</span>
+          <span>Thus, mukbang means, roughly, ‘a broadcast where people eat’.</span>
         </div>
         <div class="why">
           <h3>What are mukbangs?</h3>
@@ -26,7 +27,7 @@
           <h3>Why are there issues with mukbangs</h3>
         </div>
 
-          </div>
+        </div>
         </div>
 
 
