add about page elements

--- a/about.html
+++ b/about.html
@@ -13,18 +13,29 @@
       <div class="descrip">
         <div class="what">
           <span id = "korean">먹&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방</span>
-          <span>Mukda &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bangsong</span>
+          <h4>Mukda &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bangsong</h4>
           <span>'to eat' &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'broadcast'</span>
-          <span>Thus, mukbang means, roughly, ‘a broadcast where people eat’.</span>
-        </div>
-        <div class="why">
-          <h3>What are mukbangs?</h3>
+          <h5>Thus, mukbang means, roughly, ‘a broadcast where people eat’.</h5>
+        <div class="what1">
           <p>A mukbang, also spelled meokbang, translates to 'eating show'. It is an online audiovisual broadcast in which a host consumes large quantities of food while interacting with the audience. It became popular in South Korea in 2010, and since then it has become a worldwide trend.</p>
+        </div>
+        </div>
+          <h4>Why did people start watching mukbangs?</h4>
+        <div class="why">
+          <div class="whyDescrip">
+          <img class = "whyPic" src="solo.png">
+            <h5>Solomangarephobia - the fear of eating alone in public. More people in Korea are
+              living alone.</h5>
+          </div>
 
-          <h3>Why do people watch mukbangs?</h3>
+          <div class="whyDescrip">
+          <img class = "whyPic" src="feast.png">
+            <h5>Food Porn - The food looks SO DAMN GOOD</h5>
+          </div>
         </div>
         <div class="how">
-          <h3>Why are there issues with mukbangs</h3>
+          <h4>Why are there issues with mukbangs</h4>
+          <span>unattainable standards and body image: some ppl throw up behind the scenes, workout crazy</span>
         </div>
 
         </div>
