--- a/about.html
+++ b/about.html
@@ -25,12 +25,15 @@
           <div class="whyDescrip">
           <img class = "whyPic" src="solo.png">
             <h5>Solomangarephobia - the fear of eating alone in public. More people in Korea are
-              living alone.</h5>
+              living alone at home.</h5>
           </div>
-
           <div class="whyDescrip">
           <img class = "whyPic" src="feast.png">
             <h5>Food Porn - The food looks SO DAMN GOOD</h5>
+          </div>
+          <div class="whyDescrip">
+          <img class = "whyPic" src="moon.png">
+            <h5>Dieters - Satisfaction from food visuals and quantities.</h5>
           </div>
         </div>
         <div class="how">
