about page done

--- a/about.html
+++ b/about.html
@@ -20,25 +20,41 @@
           <p>A mukbang, also spelled meokbang, translates to 'eating show'. It is an online audiovisual broadcast in which a host consumes large quantities of food while interacting with the audience. It became popular in South Korea in 2010, and since then it has become a worldwide trend.</p>
         </div>
         </div>
-          <h4>Why did people start watching mukbangs?</h4>
+
+        <h4>Why did people start watching and/or doing mukbangs?</h4>
+
         <div class="why">
           <div class="whyDescrip">
           <img class = "whyPic" src="solo.png">
-            <h5>Solomangarephobia - the fear of eating alone in public. More people in Korea are
-              living alone at home.</h5>
+            <p>Solomangarephobia - the fear of eating alone in public. More people in Korea are
+              living alone at home.</p>
           </div>
           <div class="whyDescrip">
           <img class = "whyPic" src="feast.png">
-            <h5>Food Porn - The food looks SO DAMN GOOD</h5>
+            <p>Food Porn - The spread is always visually stimulating. ASMR videos appeal to those who enjoy hearing the texture and sounds during a meal.</p>
           </div>
           <div class="whyDescrip">
           <img class = "whyPic" src="moon.png">
-            <h5>Dieters - Satisfaction from food visuals and quantities.</h5>
+            <p>Dieters - Satisfaction from food visuals and quantities. Some viewers suppress their appetites by watching others eat what they want.</p>
           </div>
         </div>
+
+        <h4>Why are there issues with mukbangs?</h4>
+
         <div class="how">
-          <h4>Why are there issues with mukbangs</h4>
-          <span>unattainable standards and body image: some ppl throw up behind the scenes, workout crazy</span>
+          <div class="howDescrip">
+            <p>Rewards - Mukbangers create experiences for the fulfillment of their communities and themselves. The audience is deeply engaged and 'thanks' the host by upvoting,
+            sharing, or sending 'gifts' that can be redeemed for monetary payment on livestreaming platforms. Youtube mukbangs are paid according to views.</p>
+          </div>
+          <img class = "howPic" src="rewards.png">
+          <div class="issues">
+            <ul>
+              <li>Promotion of overeating for the thrill of pleasure or fame </li>
+              <li>Encouragement of unhealthy eating behaviors(ie. "restrict, binge, repent, repeat”)</li>
+              <li>Perpetuate existing standards of unrealistic body images </li>
+              <li>Correlations to predatory behavior </li>
+            </ul>
+          </div>
         </div>
 
         </div>
