--- a/about.html
+++ b/about.html
@@ -58,6 +58,11 @@
         </div>
 
         </div>
+        <div class="watch">
+          <a id = "go" href="index.html">
+             Take a look at the Mukbang Menu <img width=10% src="arrow.gif">
+            </a>
+        </div>
         </div>
 
 
