--- a/back.html
+++ b/back.html
@@ -9,8 +9,10 @@
   <body>
 
     <div class ="container">
-      <div class="abt">
-          <img id = "abtImg" width=75px height=75px src="abt.png">
+      <div class="watch1">
+        <a id = "go" href="about.html">
+           What are mukbangs? <img id = "abtImg" width=12% src="abt.png">
+          </a>
       </div>
 
       <div class="menuBox">
@@ -91,10 +93,12 @@
       </div>
 
 
-      <div class = "arrow">
-        <img src="leftArrow.gif" id ="before">
-      </div>
+      <div class="watch">
+        <a id = "go" href="index.html">
+           Go to the front menu page <img width=10% src="leftArrow.gif">
+          </a>
 
+      </div>
   </div>
   <script src="script2.js" charset="utf-8"></script>
   </body>
