--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div class ="container">
-      <div class="abt">
-          <img id = "abtImg" width=75px height=75px src="abt.png">
+      <div class="watch1">
+        <a id = "go" href="about.html">
+           What are mukbangs? <img id = "abtImg" width=12% src="abt.png">
+          </a>
       </div>
 
       <div class="menuBox">
@@ -92,8 +94,10 @@
 
       </div>
 
-      <div class = "arrow">
-        <img src="arrow.gif" id = "next">
+      <div class="watch">
+        <a id = "go" href="back.html">
+           Take a look at the Back Page <img width=10% src="arrow.gif">
+          </a>
 
       </div>
   </div>
