--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
               <li>Promotion of overeating for the thrill of pleasure or fame </li>
               <li>Encouragement of unhealthy eating behaviors(ie. "restrict, binge, repent, repeat”)</li>
               <li>Perpetuate existing standards of unrealistic body images </li>
-              <li>Correlations to predatory behavior </li>
+              <li>The platforms induce predatory behavior verbal harrassments and attacks</li>
             </ul>
           </div>
         </div>
