--- a/back.html
+++ b/back.html
@@ -30,22 +30,22 @@
         </div>
 
         <div id ="div6">
-          <img src="inahConvenience.png" class = "thumbnailL">
+          <img src="tzuyang.png" class = "thumbnailL">
           <img src = "play.png" id = "play6" class = "playL">
 
-          <div id = "inahModal" class="modal">
-             <iframe controls src="https://www.youtube.com/embed/nkhhq0LJHOQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div id = "tzuyangModal" class="modal">
+            <iframe controls src="https://www.youtube.com/embed/54aFiAuI65w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
 
-          <div id = "inah" class = "descripR">
-            <h4> Inah's Convenience Food Mukbang</h4>
+          <div id = "tzuyang" class = "descripR">
+            <h4> Tzuyang's Undisclosed Ad Controversy</h4>
           </div>
         </div>
 
 
         <div id="div7">
           <div id = "katherine" class = "descripL">
-            <h4> Katherine's Chick Fil A Mukbang</h4>
+            <h4> Katherine's Chik Fil A Mukbang </h4>
           </div>
 
           <img src="katherine.png" class = "thumbnailR">
@@ -80,13 +80,13 @@
 
 
         <div id="div10">
-          <img src="chu.png" class = "thumbnailL">
+          <img src="erik.png" class = "thumbnailL">
           <img src = "play.png" id = "play10" class = "playL">
-          <div id = "chuModal" class="modal">
-            <iframe controls src="https://www.youtube.com/embed/r1IixKcNALQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div id = "erikModal" class="modal">
+            <iframe controls src="https://www.youtube.com/embed/BG6memKtf5E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <div id = "chu" class = "descripR">
-            <h4>Chujeong's Fried Chicken Mukbang</h4>
+          <div id = "erik" class = "descripR">
+            <h4> Erik's 35,000+ Calorie Cheatsgiving </h4>
           </div>
 
         </div>
